martianov-final-step/src/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: martianov-api
  namespace: default
spec:
  selector:
    app: martianov-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
