martianov-final-step/src/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-backend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/hostname: app.martianov.devops7.test-danit.com
spec:
  ingressClassName: nginx
  rules:
  - host: app.martianov.devops7.test-danit.com  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: martianov-api
            port:
              number: 80
